Add webapp full

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="ToDo WebApp" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://webdesign-vito-luigi.it/appIcon/favicon.png" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon App -->
-    <link rel="apple-touch-icon" href="https://webdesign-vito-luigi.it/appIcon/favicon.png" />
+    <link rel="apple-touch-icon" href="https://webdesign-vito-luigi.it/appIcon/apple-touch-icon.png" />
+    <!-- Manifest for webapp and PWA -->
+    <link rel="manifest" href="/manifest.json" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
