Add meta-tag into head

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="apple-mobile-web-app-title" content="ToDo WebApp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="ToDo, WebApp, PWA, Progressive Web App, Task Manager, Bale" />
+    <meta name="description" content="A simple and efficient ToDo List WebApp built with React, TypeScript, and Vite. Manage your tasks seamlessly with this Progressive Web App." />
+    <meta name="author" content="Luigi Balestrucci" />
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://webdesign-vito-luigi.it/appIcon/favicon.png" type="image/x-icon">
     <!-- Favicon App -->
