--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="description" content="A simple and efficient ToDo List WebApp built with React, TypeScript, and Vite. Manage your tasks seamlessly with this Progressive Web App." />
     <meta name="author" content="Luigi Balestrucci" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="https://webdesign-vito-luigi.it/appIcon/favicon.png" type="image/x-icon">
-    <!-- Favicon App -->
-    <link rel="apple-touch-icon" href="https://webdesign-vito-luigi.it/appIcon/apple-touch-icon.png" />
+    <link rel="icon" href="https://i.postimg.cc/1RVB5F0n/9-B0-CFD8-F-E1-E4-478-C-88-DE-C1-ABDDAEBCED.png" type="image/png">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/1RVB5F0n/9-B0-CFD8-F-E1-E4-478-C-88-DE-C1-ABDDAEBCED.png">
     <!-- Manifest for webapp and PWA -->
     <link rel="manifest" href="/manifest.json" />
     <!-- Google Fonts -->
